EM-5080 enable fortify (#1047)